[package]
name = "looker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starduck = { git = "https://github.com/ChipDepot/StarDuck.git", branch = "main" }

project-root = "0.2.2"
dotenv = "0.15"

paho-mqtt = "0.12.1"

redis = "0.23"

log = "0.4.20"
tracing = "0.1.37"
env_logger = "0.10.0"


