[package]
name = "looker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starduck = { git = "https://github.com/ChipDepot/StarDuck.git", branch = "main" }

project-root = "0.2.2"
dotenv = "0.15"

paho-mqtt = "0.12.1"

redis = "0.23"

log = "0.4.20"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
env_logger = "0.10.0"

serde = "1"
serde_json = "1.0"

tokio = { version = "1.32", features = ["full"] }
axum = { version = "0.6.20", features = ["tracing"] }

rayon = { version = "1.8" }
