[package]
name = "looker"
version = "0.1.0"
edition = "2021"

[dependencies]
starduck = "0.1"

project-root = "0.2.2"
dotenv = "0.15"
paho-mqtt = "0.12.2"

redis = "0.24"

log = "0.4.20"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
env_logger = "0.10.0"

serde = "1"
serde_json = "1.0"

tokio = { version = "1.32", features = ["full"] }
axum = { version = "0.7.2", features = ["tracing", "json"] }

reqwest = { version = "0.11.22", features = ["json"] }
url = "2.4.1"
uuid = { version = "1.6.1", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0.77"
async-trait = "0.1.75"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs"] }
